--- a/clash-filter.ini
+++ b/clash-filter.ini
@@ -14,11 +14,13 @@ ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/blackmatrix7/ios_r
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Proxy/Proxy.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/voosl/clash_ini/refs/heads/main/ProxyGFWlist.list
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔮 无限流量`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🎯 其他节点`[]🚀 手动切换`[]DIRECT
+;custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔮 无限流量`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🎯 其他节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=📘 GitHub`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🎯 其他节点`[]🚀 手动切换`[]DIRECT`[]REJECT
 custom_proxy_group=📢 whatsapp`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🎯 其他节点`[]🚀 手动切换`[]DIRECT`[]REJECT
